  the future), so that a test suite can communicate with clients that connect
  to the simulated tty device node. (second part of issue #9)
- Add recording of read()s and write()s to a device into files, called
  "device scripts". Add umockdev-record option -s/--script for this.
- Add new method umockdev_testbed_load_script() to replay read()s and
  write()s of a device from a script. (issue #18)
- Add new method umockdev_testbed_set_attribute_link() to set attributes which
  are symlinks; most importantly this allows testbeds to set the "driver"
  attribute. (first part of issue #22)
- Record the "driver" attribute in umockdev-record, and restore it in
  umockdev_testbed_add_from_string(). (second part of issue #22)

Bug fixes:
- umockdev-run: Give proper error message if --ioctl argument is invalid.
- preload: Only look up original libc functions once. (issue #21)
- preload: Wrap fclose(). (issue #20)

0.2.11 (2013-07-03)
-------------------
- Do not overwrite an existing $LD_PRELOAD in umockdev-run and umockdev-record.
- Add "make check-valgrind" target to debug memory leaks.
- Add recently added API to reference documentation.
- Fix various memory leaks.

0.2.10 (2013-07-01)
-------------------
- Make stat()ing of emulated /dev/ nodes appear as actual block/char device
  nodes with proper major/minor number, instead of regular files. (issue #16)
- Add umockdev_testbed_add_from_file() convenience wrapper around
  add_from_string(). (issue #15)
- Handle USBDEVFS_REAPURB ioctls without a previous SUBMITURB like the real USB
  stack (return EAGAIN instead of crashing with an assertion). This makes
  umockdev work with gvfs' mtp backend.

0.2.9 (2013-06-20)
------------------
- preload: Do not change errno when calculating wrapped paths.
- Add umockdev_testbed_disable() and umockdev_testbed_enable() methods for
  temporarily disabling the emulated /sys and /dev. This can be used for
  temporarily switching back to the real /sys and /dev without having to