@@ -322,7 +322,7 @@ t_system_script_log_chatter ()
         assert (Process.spawn_async_with_pipes (null,
             {umockdev_record_path, "--script", (string) ptyname + "=" + log, "--",
              Path.build_filename (rootdir, "tests", "chatter"), (string) ptyname},
-            null, SpawnFlags.SEARCH_PATH | SpawnFlags.DO_NOT_REAP_CHILD,
+            null, SpawnFlags.SEARCH_PATH | SpawnFlags.DO_NOT_REAP_CHILD | SpawnFlags.STDOUT_TO_DEV_NULL,
             null, out chatter_pid, null, null, null));
     } catch (SpawnError e) {
         stderr.printf ("Cannot call umockdev-record: %s\n", e.message);
